# jarvis3

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  dependencies.py  main.py  mypy.ini  test.ipynb
app/api/: auth.py  dependencies.py  router.py
app/api/v1/: user_router.py  v1_router.py
app/api/v1/schemas/: user_schema.py
app/config/: config.py
app/domain/: exceptions.py  util.py
app/domain/interfaces/: __init__.py  agent_ifaces.py  embedding_ifaces.py  link_ifaces.py  message_router.py  message_router_iface.py  mixins_repo_iface.py  user_ifaces.py
app/domain/models/: __init__.py  base_domain_model.py  link.py  message.py  user.py
app/domain/services/: __init__.py  embedding_service.py  link_service.py  message_router.py  user_service.py
app/domain/services/messages/: dependencies.py  domain_router.py  injector.py  injectors.py  main_router.py  middlewares.py  routers.py
app/infrastructure/: deps_injector.py
app/infrastructure/agents/: __init__.py  agent_factory.py  links_filter_agent.py  llm_models.py  main_agent.py  tools.py
app/infrastructure/clients/: __init__.py  openai_embed_client.py
app/infrastructure/db/: db.py  wait_for_db.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 821803c5f569_init.py  d09cedeaf447_init.py
app/infrastructure/db/models/: __init__.py  base_model_orm.py  link_orm.py  user_orm.py
app/infrastructure/repositories/: __init__.py  link_repo.py  sqlalchemy_mixins.py  user_repo.py
app/tasks/: __init__.py  task_create_admin.py
app/telegram/: adapter.py  bot_factory.py  middlewares.py  routers.py  runner.py  settings.py
app/tests/integration/: conftest.py  test_user_api.py  test_utils.py
app/tests/unit/: conftest.py  test_repo_sqlalchemy_mixins.py
app/utils/: crypto_hash.py  jwt_token.py
postgres/: Dockerfile
proxy/: Dockerfile
proxy/conf.d/: default.conf
scripts/: dump_db.sh  google_drive.py  restore.readme.txt  restore_db.sh  run.sh
